--- a/templates/base.html
+++ b/templates/base.html
@@ -4,25 +4,30 @@
 <html lang="en">
   <head>
     {% block meta %}
+        <!-- Meta tags -->
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
 
-    {% block extra_meta %}
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
     {% endblock %}
 
     {% block corecss %}
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://kit.fontawesome.com/496853649b.js" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -30,20 +35,100 @@
 
     <title>Fit Quest {% block extra_title %}{% endblock %}</title>
   </head>
+
   <body>
-    <header class="header-container"></header>
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+        <div class="container-fluid justify-content-center justify-content-md-between">
+          <div class="d-flex my-2 my-sm-0">
+            <a class="navbar-brand" href="#">
+              <h2 class="text-green my-0"><strong><span class="text-maroon">Fit</span></strong>Quest</h2>
+            </a>
+            <!-- Search form -->
+            <form method="GET" action="">
+              <div class="d-flex input-group w-auto my-auto">
+                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <div class="input-group-append">
+                  <button class="btn border-black rounded-0" type="submit">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
 
-    {% if messages %}
-        <div class="message-container"></div>
-    {% endif %}
+          <ul class="navbar-nav flex-row">
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link d-flex align-items-center" href="#">
+                <span class="padding text-green">Home</span>
+              </a>
+            </li>
 
-    {% block page_header %}
-    {% endblock %}
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link d-flex align-items-center" href="#">
+                <span class="padding text-green">Community</span>
+              </a>
+            </li>
 
-    {% block content %}
-    {% endblock %}
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link d-flex align-items-center" href="#">
+                <span class="padding text-green">Shop</span>
+              </a>
+            </li>
 
-    {% block postloadjs %}
-    {% endblock %}
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="padding text-green">Profile</span>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                <a class="dropdown-item px-2 text-green" href="#">My Profile</a>
+                <a class="dropdown-item px-2 text-green" href="#">My Subscriptions</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item px-2 text-green" href="#">Logout</a>
+              </div>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_login' %}"><span class="text-green">Login</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_signup' %}"><span class="text-green">Signup</span></a>
+            </li>
+            {% endif %}
+
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="#">
+                <div class="text-center">
+                  <div><i class="fas fa-shopping-cart text-green"></i></div>
+                  <p class="my-0">
+                    {% if grand_total %}
+                        ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                    {% endif %}
+                  </p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      {% if messages %}
+      <div class="message-container"></div>
+      {% endif %}
+
+      {% block page_header %}
+      {% endblock %}
+
+      {% block content %}
+      {% endblock %}
+
+      {% block postloadjs %}
+      {% endblock %}
+    </main>
+
   </body>
 </html>
