--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    
+<div class="cover">
+    <div class="cover-content">
+      <h1>Welcome to FitQuest</h1>
+      <p>Discover a healthier you.</p>
+      <button class="btn btn-primary">Join Us</button>
+    </div>
+  </div>
 {% endblock %}
