--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,35 @@
-html {
+body, html {
     height: 100%;
 }
+
+.cover {
+    background: url('/media/homepage_background.webp') no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    font-family: 'Open Sans';
+}
+
+.cover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+  }
+
+.cover-content {
+    position: relative;
+    z-index: 2;
+    color: white;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 
 /* from Bulma */
 .icon {
@@ -9,6 +38,18 @@ html {
     justify-content: center;
     height: 1.5rem;
     width: 1.5rem;
+}
+
+.btn-black {
+    background: black;
+    color: white;
+}
+
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+    background: #222;
+    color: white;
 }
 
 .bg-black{
@@ -27,6 +68,29 @@ html {
     border: 1px solid black !important;
 }
 
-.padding {
+.spacing {
     padding: 0 5px;
 }
+
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+    .container {
+      max-width: 80%;
+    }
+  }
+  
+  /* fixed top navbar only on medium and up */
+  @media (min-width: 992px) {
+      .fixed-top-desktop-only {
+          position: fixed;
+          top: 0;
+          right: 0;
+          left: 0;
+          z-index: 1030;
+      }
+  
+      .header-container {
+          padding-top: 50px;
+      }
+  }
+  
