--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     {% block corecss %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" >
     {% endblock %}
 
     {% block extra_css %}
@@ -49,7 +50,7 @@
               <div class="d-flex input-group w-auto my-auto">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
-                  <button class="btn border-black rounded-0" type="submit">
+                  <button class="btn btn-black border-black rounded-0 " type="submit">
                     <i class="fas fa-search"></i>
                   </button>
                 </div>
@@ -59,33 +60,33 @@
 
           <ul class="navbar-nav flex-row">
             <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link d-flex align-items-center" href="#">
-                <span class="padding text-green">Home</span>
+              <a class="nav-link d-flex align-items-center" href="{% url 'home' %}">
+                <span class="spacing text-green">Home</span>
               </a>
             </li>
 
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link d-flex align-items-center" href="#">
-                <span class="padding text-green">Community</span>
+                <span class="spacing text-green">Community</span>
               </a>
             </li>
 
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link d-flex align-items-center" href="#">
-                <span class="padding text-green">Shop</span>
+                <span class="spacing text-green">Shop</span>
               </a>
             </li>
 
             {% if user.is_authenticated %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="padding text-green">Profile</span>
+                <span class="spacing text-green"><i class="fa-solid fa-user"></i></span>
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
                 <a class="dropdown-item px-2 text-green" href="#">My Profile</a>
                 <a class="dropdown-item px-2 text-green" href="#">My Subscriptions</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item px-2 text-green" href="#">Logout</a>
+                <a class="dropdown-item px-2 text-green" href="{% url 'account_logout' %}">Logout</a>
               </div>
             </li>
             {% else %}
@@ -105,6 +106,7 @@
                     {% if grand_total %}
                         ${{ grand_total|floatformat:2 }}
                     {% else %}
+                      <!-- <span class="badge rounded-pill badge-notification bg-danger">1</span> -->
                     {% endif %}
                   </p>
                 </div>
