--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,6 +31,21 @@ body, html {
     transform: translateY(-50%);
   }
 
+.card {
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+    border-bottom: 1px solid #ddd;
+}
+
+.card-body {
+    padding: 15px;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -71,6 +86,17 @@ body, html {
 .spacing {
     padding: 0 5px;
 }
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
