--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,10 @@ body, html {
     height: 100%;
 }
 
+.content-container {
+    padding-top: 15px;
+}
+
 .cover {
     background: url('/media/homepage_background.webp') no-repeat center center fixed;
     background-size: cover;
@@ -37,7 +41,8 @@ body, html {
 }
 
 .card-img-top {
-    height: 200px;
+    height: 350px;
+    width: 300px;
     object-fit: cover;
     border-bottom: 1px solid #ddd;
 }
