--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
               <h2 class="text-green my-0"><strong><span class="text-maroon">Fit</span></strong>Quest</h2>
             </a>
             <!-- Search form -->
-            <form method="GET" action="">
+            <form method="GET" action="{% url 'product_list' %}">
               <div class="d-flex input-group w-auto my-auto">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
