--- a/shop/templates/shop/products_list.html
+++ b/shop/templates/shop/products_list.html
@@ -127,7 +127,7 @@
                     <p class="lead text-left text-success font-weight-bold">${{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="#">
+                        <a class="text-muted" href="{% url 'product_list' %}?category={{ product.category.name }}">
                             <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                         </a>
                     </p>
@@ -151,4 +151,18 @@
         {% endfor %}
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fa-solid fa-caret-up text-green mx-auto my-auto"></i>
+    </a>	
+</div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        });
+	</script>
 {% endblock %}
