added shopping bag app, urls and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
             {% endif %}
 
             <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{% url 'view_bag' %}">
                 <div class="text-center">
                   <div><i class="fas fa-shopping-cart text-green"></i></div>
                   <p class="my-0">
