added bag context and delivery logic

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container py-5">
+<div class="container content-container my-5">
     <div class="row mb-4">
         <div class="col">
             <h2 class="text-center">Your Bag</h2>
