--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -35,14 +35,20 @@
             <p class="mb-4">{{ product.description }}</p>
 
             <!-- Add to Cart Button -->
-            <form method="POST" action="#">
+            <form method="POST" action="{% url 'add_to_bag' product.id %}">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="quantity">Quantity:</label>
-                    <input type="number" name="quantity" id="quantity" value="1" min="1" max="99" class="form-control w-25">
+                <div class="col{% if s %}-12 mt-2{% endif %}">
+                    <a href="{% url 'product_list' %}" class="btn border-black rounded-0 mt-5">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
+                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg">Add to Cart</button>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </form>
+            
         </div>
     </div>
 </div>
