--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,54 +15,67 @@
     <h2 class="text-center mb-4">Your Shopping Bag</h2>
 
     {% if bag_items %}
-        <table class="table table-bordered text-center">
-            <thead class="thead-light">
-                <tr>
-                    <th>Image</th>
-                    <th>Product</th>
-                    <th>Quantity</th>
-                    <th>Unit Price</th>
-                    <th>Total Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in bag_items %}
+        <div class="table-responsive">
+            <table class="table table-bordered text-center">
+                <thead class="thead-light">
                     <tr>
-                        <!-- Product Image -->
-                        <td>
-                            {% if item.product.image %}
-                                <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-thumbnail" style="width: 100px;">
-                            {% else %}
-                                <img src="{{ MEDIA_URL }}noimage.png" alt="No Image" class="img-thumbnail" style="width: 100px;">
-                            {% endif %}
-                        </td>
-
-                        <!-- Product Name -->
-                        <td>{{ item.product.name }}</td>
-
-                        <!-- Quantity -->
-                        <td>{{ item.quantity }}</td>
-
-                        <!-- Unit Price -->
-                        <td>${{ item.product.price }}</td>
+                        <th>Image</th>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th>Unit Price</th>
+                        <th>Total Price</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for item in bag_items %}
+                        <tr>
+                            <td>
+                                {% if item.product.image %}
+                                    <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-thumbnail" style="width: 80px;">
+                                {% else %}
+                                    <img src="{{ MEDIA_URL }}noimage.png" alt="No Image" class="img-thumbnail" style="width: 80px;">
+                                {% endif %}
+                            </td>
+                            <td>{{ item.product.name }}</td>
+                            <td>{{ item.quantity }}</td>
+                            <td>${{ item.product.price }}</td>
 
-        <div class="text-right">
-            <h4>Total: ${{ total|floatformat:2 }}</h4>
-            <h5>Delivery: ${{ delivery|floatformat:2 }}</h5>
-            <h3>Grand Total: ${{ grand_total|floatformat:2 }}</h3>
-            <a href="#" class="btn btn-primary btn-lg mt-3">Proceed to Checkout</a>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-6 offset-md-6">
+                <div class="bg-light p-3 border rounded">
+                    <p class="d-flex justify-content-between">
+                        <span>Total:</span>
+                        <span>${{ total|floatformat:2 }}</span>
+                    </p>
+                    <p class="d-flex justify-content-between">
+                        <span>Delivery:</span>
+                        <span>${{ delivery|floatformat:2 }}</span>
+                    </p>
+                    <h4 class="d-flex justify-content-between">
+                        <span>Grand Total:</span>
+                        <span>${{ grand_total|floatformat:2 }}</span>
+                    </h4>
+                    <div class="text-center mt-3">
+                        <a href="#" class="btn btn-primary btn-lg btn-block">Proceed to Checkout</a>
+                    </div>
+                </div>
+            </div>
         </div>
     {% else %}
+        <!-- Empty Bag Message -->
         <div class="text-center">
             <p>Your bag is currently empty.</p>
-            <a href="{% url 'product_list' %}" class="btn btn-outline-primary">Shop now</a>
+            <a href="{% url 'product_list' %}" class="btn btn-outline-primary">Shop Now</a>
         </div>
     {% endif %}
 </div>
+
 
 
 {% endblock %}
