--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -16,7 +16,7 @@
 
     {% if bag_items %}
         <div class="table-responsive">
-            <table class="table table-bordered text-center">
+            <table class="table table-bordered">
                 <thead class="thead-light">
                     <tr>
                         <th>Image</th>
@@ -36,7 +36,11 @@
                                     <img src="{{ MEDIA_URL }}noimage.png" alt="No Image" class="img-thumbnail" style="width: 80px;">
                                 {% endif %}
                             </td>
-                            <td>{{ item.product.name }}</td>
+                            <td>
+                                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>  
+                                <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                            </td>
                             <td>{{ item.quantity }}</td>
                             <td>${{ item.product.price }}</td>
 
