--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -15,7 +15,7 @@
                 <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" class="img-fluid">
             {% endif %}
         </div>
-        
+
         <!-- Product Details -->
         <div class="col-md-6">
             <h1 class="mb-3">{{ product.name }}</h1>
@@ -34,10 +34,25 @@
             <h3 class="text-success mb-4"><strong>${{ product.price }}</strong></h3>
             <p class="mb-4">{{ product.description }}</p>
 
-            <!-- Add to Cart Button -->
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                 {% csrf_token %}
                 <div class="form-row">
+                    {% if product.has_sizes %}
+                        <div class="col-12">
+                            <p><strong>Size:</strong></p>
+                            <div class="form-group w-50">
+                                <select name="product_size" class="form-control">
+                                    <option value="" disabled selected>Select a size</option>
+                                    <option value="S">Small (S)</option>
+                                    <option value="M" selected>Medium (M)</option>
+                                    <option value="L">Large (L)</option>
+                                    <option value="XL">Extra Large (XL)</option>
+                                </select>
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    <!-- Quantity Input -->
                     <div class="col-12">
                         <p class="mt-3"><strong>Quantity:</strong></p>
                         <div class="form-group w-50">
@@ -47,6 +62,7 @@
                         </div>
                     </div>
 
+                    <!-- Buttons -->
                     <div class="col-12">
                         <a href="{% url 'product_list' %}" class="btn btn-outline-black rounded-0 mt-5">
                             <span class="icon">
@@ -59,8 +75,8 @@
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                 </div>
             </form>
-            
         </div>
     </div>
 </div>
+
 {% endblock %}
