--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,43 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
+<div class="toast custom-toast rounded-0 border-0" data-autohide="false" id="product-toast">
+    <div class="toast-header bg-success text-white">
         <strong class="mr-auto">Success!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
-        {{ message }}        
+    <div class="toast-body bg-light text-dark">
+        {{ message }}
+        <hr class="mt-1 mb-3">
+        {% for item in bag_items %}
+            <p class="py-1">Your Bag ({{ product_count }})</p>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                    <img src="{{ item.product.image.url }}" class="img-fluid rounded" style="max-width: 60px; height: auto;">
+                </div>
+                <div class="col-9">
+                    <p class="mb-0"><strong>{{ item.product.name }}</strong></p>
+                    <p class="mb-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                    <p class="mb-0 small text-muted">Qty: {{ item.quantity }}</p>
+                </div>
+            </div>
+        {% endfor %}
+        {% if grand_total %}
+        <hr class="mt-3">
+        <div class="text-center">
+            <p class="mb-1 text-dark">
+                <strong>Total:</strong>
+                <span class="float-right">${{ total|floatformat:2 }}</span>
+            </p>
+            {% if free_delivery_delta > 0 %}
+                <p class="mb-2 text-warning">
+                    Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
+                </p>
+            {% endif %}
+            <a href="#" class="btn btn-success btn-block rounded-0">
+                <span class="text-uppercase">Go To Secure Checkout</span>
+                <i class="fas fa-lock"></i>
+            </a>
+        </div>
+        {% endif %}
     </div>
 </div>
