changes in fitquest model and added views and template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
     <div class="cover-content">
       <h1>Welcome to FitQuest</h1>
       <p>Discover a healthier you.</p>
-      <button class="btn btn-primary">Join Us</button>
+      <a href="{% url 'plan_list' %}"><button class="btn btn-primary">Join Us</button></a>
     </div>
 </div>
 {% endblock %}
