added plan detail template and view

--- a/fitquest/templates/fitquest/plan_list.html
+++ b/fitquest/templates/fitquest/plan_list.html
@@ -36,7 +36,7 @@
                     </button>
 
                     <!-- Link to View Full Plan -->
-                    <a href="" class="btn btn-primary mt-2">View Plan</a>
+                    <a href="{% url 'plan_detail' plan.id %}" class="btn btn-primary mt-2">View Plan</a>
                 </div>
             </div>
         </div>
